service.yml
apiVersion: v1
kind: Service
metadata:
  name: hackboard
spec:
  selector:
    app: hackboard
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
